Corrected metadata problems, layout issues, icons, navbar Metadata problems (undefined system-types after new creation) were causing failures to launch metadata editor. The user page nth child formatting was failing if published had an odd number. Added the [New Item] to the navbar for other pages. Modified the svg in naturalcrit.svg.jsx to be a d6 instead of d20

--- a/client/homebrew/pages/userPage/brewItem/brewItem.less
+++ b/client/homebrew/pages/userPage/brewItem/brewItem.less
@@ -6,7 +6,7 @@
 	box-sizing                  : border-box;
 	box-sizing                  : border-box;
 	overflow                    : hidden;
-	min-height 						: 80px;
+	min-height 					: 80px;
 	width                       : 48%;
 	margin-right                : 15px;
 	margin-bottom               : 15px;
@@ -33,9 +33,6 @@
 			opacity : 1;
 		}
 	}
-	&:nth-child(2n + 1){
-		margin-right : 0px;
-	}
 	.links{
 		.animate(opacity);
 		position         : absolute;
@@ -57,5 +54,11 @@
 				opacity : 1;
 			}
 		}
+	}
+}
+
+.published .brewItem, .unpublished .brewItem {
+	&:nth-child(2n + 1){
+		margin-right : 0px;
 	}
 }
